# Dasari-Algo-trading

./: .env.example  .gitignore  BACKEND-NOT-REACHABLE-FIX.md  HOST-IN-CLOUD.md  HOW-TO-RUN.md  README.md  START-HERE.txt  Start-All.ps1  Start-Backend.ps1  docker-compose.yml
.github/: .github.code-workspace
.github/workflows/: backend.yml
backend/: README.md  pyproject.toml  requirements.txt  run.ps1
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  audit.py  auth.py  dashboard.py  market.py  orders.py  portfolio.py  risk.py  signals.py
backend/app/core/: __init__.py  config.py
backend/app/services/: __init__.py  candle_service.py  email_service.py  market_context.py  order_manager.py  pattern_detector.py  portfolio_service.py  position_store.py  risk_engine.py  strategy_engine.py  trade_logger.py
backend/tests/: test_pattern_detector.py  test_risk_engine.py  test_strategy_engine.py
docker/: Dockerfile.api
docs/: ARCHITECTURE.md  BRD.md  CLOUD_AND_SCHEDULE.md  DELIVERY_PLAN.md  FINAL_STRATEGY_HIGH_PROBABILITY.md  INFRASTRUCTURE_DEVOPS.md  INSTALL_AND_RUN.md  STRATEGY_AND_DATA.md  STRATEGY_IMPLEMENTATION_FILES.md
infra/terraform/environments/dev/: main.tf
infra/terraform/modules/network/: main.tf
mobile/: package.json
mobile/src/screens/: Dashboard.tsx
scripts/: README-SCHEDULE.md  start-backend.sh  stop-backend.sh
web/: next.config.js  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/auth/callback/: page.tsx
web/src/components/: Chart5m.tsx
